--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,7 +1,22 @@
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700,300);
+
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+
+[class*="fontawesome-"]:before {
+    font-family: 'FontAwesome', sans-serif;
+}
+* {
+    font-family: 'Oswald', serif;
+}
 #content {
     text-align: center;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 #game {
+
     display: inline-block;
     box-shadow: 0 1px 1px #ccc;
     width: 300px;
@@ -38,11 +53,49 @@
     border-right: none;
 }
 #tictactoe {
+    position: relative;
+    top: 1px;
+    left: 1px;
     height: 100%;
     width: 100%;
 }
-.cell {
+#player-choose {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 3;
+    background-color: #fff;
 
+}
+#player-choose>#prompt {
+    margin: auto auto 1em auto;
+    width: 50%;
+    background: #ddd;
+    height: 3em;
+    box-shadow: 0 1px 1px #eee;
+}
+.choice {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 1em;
+    display: inline-block;
+    height: 100px;
+    width: 100px;
+    font-size: 2em;
+ }
+.button {
+    cursor: pointer;
+
+    background-color: #ddd;
+    box-shadow: 0 1px 1px #bbb;
+}
+.button:hover {
+    background-color: #dadada;
+    box-shadow: 0 1px 1px #eee;
+}
+.cell {
+    display: table;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -54,7 +107,11 @@
     border: solid 2px #ddd;
 }
 .cell-val {
+    font-size: 2em;
+    display: table-cell;
     vertical-align: middle;
-    height: 100%;
-    display: inline;
+    text-align: center;
+}
+.red-border {
+    border: solid red 2px;
 }
